# malpas

./: README.md  dune-project  malpas.opam
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: malpas.cmxa
_build/default/lib/.malpas.objs/byte/: malpas.cmi  malpas.cmo  malpas.cmt
_build/default/lib/.malpas.objs/native/: malpas.cmx
_build/default/lib/.merlin-conf/: lib-malpas
_build/default/src/: main.ml
_build/default/src/.main.eobjs/byte/: dune__exe__Main.cmti
_build/default/src/.main.eobjs/native/: dune__exe__Main.cmx
_build/default/src/.merlin-conf/: exe-main
docs/: syntax.md
examples/: return5.malpas
lib/: dune  lexer.ml  lexer.mli  mstack.ml  parser.jl  parser.ml
src/: dune  lexer.ml  lexer.mli  main.ml  mstack.mli  parser.jl  parser.ml
test/: dune
