(lang dune 3.16)

(name malpas)

(generate_opam_files true)

(source
 (github Julia-PBN/malpas))

(authors "Julia-PBN" "desumn")

(maintainers "Julia-PBN" "desumn")

(license BSD-3-Clause)

(documentation https://github.com/Julia-PBN/malpas)

(package
 (name malpas)
 (synopsis "A programming language written in OCaml, how innovative !")
 (description "TBD.")
 (depends ocaml dune)
 (tags
  (compiler)))

